syntax = "proto3";

// 命 令 号: 256
// 命令名称: update_info_set
// 命令描述: 设置升级信息
// 文件名称: s256_update_info_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbUpdateInfoSet";

message UpdateInfoSetRequest {
  // ATTR: REQUSET
  uint32    dev=1;
  string    packageUrl=2;
  string    packageMd5=3;
  uint32    packageSize=4;
  repeated  uint32 id=5;
}

message UpdateInfoSetResponse {

}
